kubernetes/apps/observability/external-access/app/securitypolicies.yaml
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus-ext
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-Proto
      - cookie
    http:
      backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - authorization
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prometheus-ext
---
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: alertmanager-ext
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-Proto
      - cookie
    http:
      backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - authorization
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: alertmanager-ext
---
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: loki-ext
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-Proto
      - cookie
    http:
      backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - authorization
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: loki-ext
---
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: tempo-ext
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-Proto
      - cookie
    http:
      backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - authorization
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: tempo-ext
---
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: pyroscope-ext
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-Proto
      - cookie
    http:
      backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - authorization
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: pyroscope-ext
